k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: banking-admin-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: banking-admin-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-admin-api
  labels:
    app: banking-admin-api-deployment
  annotations:
    keel.sh/pollSchedule: "@every 10s"
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 3
  selector:
    matchLabels:
      app: banking-admin-api
  template:
    metadata:
      labels:
        app: banking-admin-api
    spec:
      imagePullSecrets:
        - name: ghcrregistrypullsecret
      containers:
        - name: banking-app
          imagePullPolicy: Always
          image: ghcr.io/oryono/banking-admin:latest
          ports:
            - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
  annotations:
    keel.sh/pollSchedule: "@every 10s"
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          imagePullPolicy: Always
          image: mysql:8.0.25
          ports:
            - containerPort: 3306
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: banking-admin-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    -   hosts:
          - alpinebanking.software
        secretName: alpinebanking-software-secret
  rules:
    - host: "banking-admin-api.alpinebanking.software"
      http:
        paths:
          - backend:
              serviceName: banking-admin-api
              servicePort: 80
